--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Matthieu Guillemot <matthieu@telco.in>"]
 edition = "2018"
 
 [dependencies]
-diesel = { version = "1.4.0", features = ["postgres", "r2d2", "uuid"] }
+diesel = { version = "1.4.0", features = ["postgres", "uuid"] }
 uuid = ">=0.2.0, <0.7.0"
